--- a/campusVulkan.css
+++ b/campusVulkan.css
@@ -1,4 +1,3 @@
-﻿
 
 /*DIN Next LT Pro Light*/
 @import url('https://www.fontify.me/wf/5791fea5cf3ff4352ab8e7f3cccc8e23');   
@@ -6,7 +5,7 @@
 /*DIN Neuzeit Grotesk Bold Cond*/
 @import url('https://www.fontify.me/wf/a43ffc0f9675eb7bb6611c0db69d7ae9');
 
-     html, body{
+html, body{
         background-color: white;           
         margin: 0;
         }
@@ -14,6 +13,7 @@
         
     #headerContainer *{
         position: absolute;
+        margin: 0;
         }
         
         
@@ -27,19 +27,62 @@
     #topBorder{
         height: 40px;
         width: 100%;
-        top: 50px;
+        top: 20px;
         background-image: url(wHeaderLiten.jpg);
         position: absolute;
     }
-    
 
-#CampusVulkan{
+    #CampusVulkan{
         font-family: font84115;
         top: 10px;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
+    }
+
+
+ul.meny {
+    padding-top: 70px;
+    width: 50%;
+    list-style: none;
+    background-color: white;
+    text-align:center;
+    font-family: sans-serif; 
+}
+.meny li { 
+    display: inline-block;
+    width:20%;
+    margin:0;
+    padding:0;
     
 }
+.meny a {
+    text-align:center;
+    padding:12px 5px 12px 5px;
+    margin:0; 
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    display:block;
+    text-decoration: none;
+    color: black;
+}
 
+li a.active {
+    background-color: black;
+    color: white;
+}
+
+li a:hover:not(.active) {
+    background-color: lightgray;
+    color: white;
+
+ul.meny li:first-child a{
+    border: none;
+}
+ul.meny li:second-child a {
+    border:none;
+}
+ul.meny li:last-child a {
+    border:none;
+}
 
