--- a/CSS/gratis.css
+++ b/CSS/gratis.css
@@ -6,10 +6,10 @@
 @import url('https://www.fontify.me/wf/a43ffc0f9675eb7bb6611c0db69d7ae9');
 
 /*Lulo Clean One Bold*/
-@import url('https://www.fontify.me/wf/a43ffc0f9675eb7bb6611c0db69d7ae9');
+@import url('https://www.fontify.me/wf/42216a06e8977da4ccec1ff4702d0922');
 
-/*DIN Neuzeit Grotesk Bold*/
-@import url('https://www.fontify.me/wf/d87bda1379ed621a34888999653191c8');
+/*Lucida Console*/
+@import url('https://www.fontify.me/wf/d5b9008d3538aedbecc7c3a8e8b5a3a6');
 
 html, body{
         background-color: white;           
@@ -34,7 +34,7 @@ html, body{
         height: 40px;
         width: 100%;
         top: 20px;
-        background-image: url(wHeaderLiten.jpg);
+        background-image: url(/Bilder/wHeaderLiten.jpg);
         position: absolute;
     }
 
@@ -62,9 +62,10 @@ ul.meny {
     padding: 0;
 }
 .meny a {
-    text-align:center;
+     text-align:center;
     padding: 12px 5px 12px 5px;
     margin:0; 
+    border-right: 1px solid black; 
     display:block;
     text-decoration: none;
     color: black;
@@ -127,20 +128,30 @@ ul.meny li:nth-child(even){
 
 #Greenbox {
     width: 100%;
-    height: 300px;
-    background-color: rgb(217,244,234);
+    height: 250px;
+    background-color: rgb(108,214,163);
     position: relative;
     
 }
 
-#mainText {
-    font-family: font97579;
-    position: absolute;
+p.subText {
+    font-family: font71543;
+    top: 10%;
+    position: relative;
+    vertical-align: middle;
     text-align: center;
+    color: white;
+    font-size: 35px;
+    margin: 0;
 }
 
-#subText {
-    font-family: font95818;
-    position: absolute;
+p.mainText {
+    font-family: font97579;
+    top: 10%;
+    position: relative;
+    vertical-align: middle;
     text-align: center;
+    color: white;
+    font-size: 150px;
+    margin: 0;
 }
