--- a/CSS/femtilappen.css
+++ b/CSS/femtilappen.css
@@ -5,6 +5,12 @@
 /*DIN Neuzeit Grotesk Bold Cond*/
 @import url('https://www.fontify.me/wf/a43ffc0f9675eb7bb6611c0db69d7ae9');
 
+/*Lulo Clean One Bold*/
+@import url('https://www.fontify.me/wf/42216a06e8977da4ccec1ff4702d0922');
+
+/*Lucida Console*/
+@import url('https://www.fontify.me/wf/d5b9008d3538aedbecc7c3a8e8b5a3a6');
+
 html, body{
         background-color: white;           
         margin: 0;
@@ -103,4 +109,59 @@ ul.meny li:nth-child(n+2){
 
 .pngLinker:hover:not(.active) {
     opacity: 0.5;
+}
+
+/* Alt oppe er meny koden laget av ine, her kommer koden til lonningsdag */
+
+#Redbox {
+    width: 100%;
+    height: 250px;
+    background-color: #FC6A6D;
+    position: relative;
+    
+}
+
+p.subText {
+    font-family: font71543;
+    top: 10%;
+    position: relative;
+    vertical-align: middle;
+    text-align: center;
+    color: white;
+    font-size: 35px;
+    margin: 0;
+}
+
+p.mainText {
+    font-family: font97579;
+    top: 10%;
+    position: relative;
+    vertical-align: middle;
+    text-align: center;
+    color: white;
+    font-size: 150px;
+    margin: 0;
+}
+
+#winPrize{
+	text-align: center;
+}
+
+#winPrize h4{
+	margin-top: 40px;
+}
+
+
+/* BOXES */
+#boxes{
+	margin-top: 40px;
+}
+
+#boxes .box{
+    float: left;
+	text-align: center;
+	width: 177px;
+	padding-right: 2px;
+	margin: 10px;
+	background-color: lightcyan;
 }
