--- a/CSS/gratis.css
+++ b/CSS/gratis.css
@@ -155,3 +155,11 @@ p.mainText {
     font-size: 150px;
     margin: 0;
 }
+
+/* FOOTER */
+footer{
+	padding: 20px;
+    color: #ffffff;
+    background: black;
+    text-align: center; 
+}
