--- a/CSS/campusVulkan.css
+++ b/CSS/campusVulkan.css
@@ -61,7 +61,7 @@ html, body{
     top 70px;
     width: 300px;
     height: 45px;
-    right: 70px;
+    right: 50px;
 }
 #alleMenyBarn*{
     position: absolute;
@@ -70,7 +70,7 @@ html, body{
 
 ul.meny {
     padding-top: 70px;
-    width: 50%;
+    width: 52%;
     list-style: none;
     background-color: white;
     text-align:center;
@@ -200,6 +200,34 @@ ul.meny li:nth-child(n+2){
     padding: 0;
     }
 }
+
+/*Kode forside (HJEM)*/
+
+
+
+#slider {
+    position: relative;
+    margin: auto;
+    background-color: white;
+    width: 100%;
+    height: 600px;
+    margin-top: 35px;
+}
+#slider img {
+    transition: opacity 3s;
+    position: absolute;
+    opacity:0;
+    width: 84%;
+    height: 450px;
+    left: 8%;
+    margin: 0;
+    padding: 0;
+}
+#slider img.fadeIn {
+    opacity:1;
+}
+
+
 
 
 /* SUBPAGE 50-LAPPEN */
