--- a/CSS/campusVulkan.css
+++ b/CSS/campusVulkan.css
@@ -301,7 +301,7 @@ p.mainText {
 }
 
 .card-body{
-    background-color: #fff;
+    background-color: rgb(217,244,234);;
     border: 1px solid #f2f2f2;
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
 }
